--- a/chem.css
+++ b/chem.css
@@ -11,7 +11,8 @@
 	border-bottom: 1px solid #ccc;
 }
 input,
-#box p {
+#box p,
+#FOut {
 	font-family: "Open Sans";
 	margin: 10px;
 	padding: 5px;
@@ -24,4 +25,8 @@ input,
 }
 .sign {
 	border: none !important;
+}
+#FOut {
+    background-color: #eee;
+    width: calc(100% - 20px);
 }
